[package]
name = "Tang-CLI"
version = "0.1.0"
edition = "2021"
authors=["Albert Xiao <xiaozhenxing.albert@outlook.com>"]
readme="README.md"
license="MIT License"
repository="https://github.com/ZhenxingXiao/tang-cli.git"
rust-version="1.64.0"
description=""
documentation=""
homepage=""
keywords=["Tang", "File Management", "CLI"]
categories=[]

[dependencies]
indoc = "1.0"
tui = "0.19"
crossterm = "0.25"
thiserror = "1.0.37"
rand = "0.8"
argh = "0.1"
chrono = "0.4.23"
sysinfo = "0.27.7"

[[bin]]
name="tang"
path="src/main.rs"